D-45120 Fixing alignment issue for Spanish mobile text due to longer verbage length

--- a/public/styles/projects/international/china-brazil/style.scss
+++ b/public/styles/projects/international/china-brazil/style.scss
@@ -2440,11 +2440,11 @@ html {
             section.footer-sign-up{
               background-color: #fff;
               text-align: center;
-              height: 50px;
+              min-height: 40px;
               a {
                 text-decoration: none;
                 font-size: 13px;
-                line-height: 50px;
+                line-height: 40px;
                 padding: 10px;
                 @media #{$small-only} {
                   &.por {
